--- a/4analyzing_the_data.ipynb
+++ b/4analyzing_the_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "9b6269a0",
    "metadata": {},
    "outputs": [
@@ -62,7 +62,7 @@
       "    if await self.run_code(code, result, async_=asy):\n",
       "  File \"C:\\Users\\ommul\\AppData\\Roaming\\Python\\Python312\\site-packages\\IPython\\core\\interactiveshell.py\", line 3577, in run_code\n",
       "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "  File \"C:\\Users\\ommul\\AppData\\Local\\Temp\\ipykernel_25412\\2035458946.py\", line 1, in <module>\n",
+      "  File \"C:\\Users\\ommul\\AppData\\Local\\Temp\\ipykernel_17260\\2035458946.py\", line 1, in <module>\n",
       "    import pandas as pd\n",
       "  File \"C:\\Users\\ommul\\AppData\\Roaming\\Python\\Python312\\site-packages\\pandas\\__init__.py\", line 39, in <module>\n",
       "    from pandas.compat import (\n",
@@ -141,7 +141,7 @@
       "    if await self.run_code(code, result, async_=asy):\n",
       "  File \"C:\\Users\\ommul\\AppData\\Roaming\\Python\\Python312\\site-packages\\IPython\\core\\interactiveshell.py\", line 3577, in run_code\n",
       "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "  File \"C:\\Users\\ommul\\AppData\\Local\\Temp\\ipykernel_25412\\2035458946.py\", line 1, in <module>\n",
+      "  File \"C:\\Users\\ommul\\AppData\\Local\\Temp\\ipykernel_17260\\2035458946.py\", line 1, in <module>\n",
       "    import pandas as pd\n",
       "  File \"C:\\Users\\ommul\\AppData\\Roaming\\Python\\Python312\\site-packages\\pandas\\__init__.py\", line 62, in <module>\n",
       "    from pandas.core.api import (\n",
@@ -220,7 +220,7 @@
       "    if await self.run_code(code, result, async_=asy):\n",
       "  File \"C:\\Users\\ommul\\AppData\\Roaming\\Python\\Python312\\site-packages\\IPython\\core\\interactiveshell.py\", line 3577, in run_code\n",
       "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "  File \"C:\\Users\\ommul\\AppData\\Local\\Temp\\ipykernel_25412\\2035458946.py\", line 1, in <module>\n",
+      "  File \"C:\\Users\\ommul\\AppData\\Local\\Temp\\ipykernel_17260\\2035458946.py\", line 1, in <module>\n",
       "    import pandas as pd\n",
       "  File \"C:\\Users\\ommul\\AppData\\Roaming\\Python\\Python312\\site-packages\\pandas\\__init__.py\", line 62, in <module>\n",
       "    from pandas.core.api import (\n",
@@ -314,7 +314,7 @@
       "    if await self.run_code(code, result, async_=asy):\n",
       "  File \"C:\\Users\\ommul\\AppData\\Roaming\\Python\\Python312\\site-packages\\IPython\\core\\interactiveshell.py\", line 3577, in run_code\n",
       "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "  File \"C:\\Users\\ommul\\AppData\\Local\\Temp\\ipykernel_25412\\2035458946.py\", line 1, in <module>\n",
+      "  File \"C:\\Users\\ommul\\AppData\\Local\\Temp\\ipykernel_17260\\2035458946.py\", line 1, in <module>\n",
       "    import pandas as pd\n",
       "  File \"C:\\Users\\ommul\\AppData\\Roaming\\Python\\Python312\\site-packages\\pandas\\__init__.py\", line 62, in <module>\n",
       "    from pandas.core.api import (\n",
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "1372e8c4",
    "metadata": {},
    "outputs": [],
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "9c18a6dc",
    "metadata": {},
    "outputs": [
@@ -595,7 +595,7 @@
        "[20640 rows x 10 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "80c85397",
    "metadata": {},
    "outputs": [
@@ -662,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "20cf4f3b",
    "metadata": {},
    "outputs": [
@@ -678,7 +678,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "18735a49",
    "metadata": {},
    "outputs": [
@@ -858,7 +858,7 @@
        "max         500001.000000  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -869,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "673b2b39",
    "metadata": {},
    "outputs": [
@@ -887,7 +887,7 @@
        "        <Axes: title={'center': 'median_house_value'}>]], dtype=object)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -907,9 +907,186 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "148a5eb7",
+   "metadata": {},
+   "source": [
+    "##CREATING A TEST SET"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "a72b6bc1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "def shuffle_and_split(data, test_ratio):\n",
+    "    np.random.seed(42) # Set the seed for reproducibility\n",
+    "    shuffled_indices = np.random.permutation(len(data)) # This returns shuffled indices\n",
+    "    test_set_size = int(len(data) * test_ratio)\n",
+    "    test_indices = shuffled_indices[:test_set_size]\n",
+    "    train_indices = shuffled_indices[test_set_size:]\n",
+    "    return data.iloc[train_indices], data.iloc[test_indices]\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "30674b03",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train, test = shuffle_and_split(df, 0.4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "992c164b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>housing_median_age</th>\n",
+       "      <th>total_rooms</th>\n",
+       "      <th>total_bedrooms</th>\n",
+       "      <th>population</th>\n",
+       "      <th>households</th>\n",
+       "      <th>median_income</th>\n",
+       "      <th>median_house_value</th>\n",
+       "      <th>ocean_proximity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>20046</th>\n",
+       "      <td>-119.01</td>\n",
+       "      <td>36.06</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>1505.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1392.0</td>\n",
+       "      <td>359.0</td>\n",
+       "      <td>1.6812</td>\n",
+       "      <td>47700.0</td>\n",
+       "      <td>INLAND</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3024</th>\n",
+       "      <td>-119.46</td>\n",
+       "      <td>35.14</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>2943.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1565.0</td>\n",
+       "      <td>584.0</td>\n",
+       "      <td>2.5313</td>\n",
+       "      <td>45800.0</td>\n",
+       "      <td>INLAND</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15663</th>\n",
+       "      <td>-122.44</td>\n",
+       "      <td>37.80</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>3830.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1310.0</td>\n",
+       "      <td>963.0</td>\n",
+       "      <td>3.4801</td>\n",
+       "      <td>500001.0</td>\n",
+       "      <td>NEAR BAY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20484</th>\n",
+       "      <td>-118.72</td>\n",
+       "      <td>34.28</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>3051.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1705.0</td>\n",
+       "      <td>495.0</td>\n",
+       "      <td>5.7376</td>\n",
+       "      <td>218600.0</td>\n",
+       "      <td>&lt;1H OCEAN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9814</th>\n",
+       "      <td>-121.93</td>\n",
+       "      <td>36.62</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>2351.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1063.0</td>\n",
+       "      <td>428.0</td>\n",
+       "      <td>3.7250</td>\n",
+       "      <td>278000.0</td>\n",
+       "      <td>NEAR OCEAN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       longitude  latitude  housing_median_age  total_rooms  total_bedrooms  \\\n",
+       "20046    -119.01     36.06                25.0       1505.0             NaN   \n",
+       "3024     -119.46     35.14                30.0       2943.0             NaN   \n",
+       "15663    -122.44     37.80                52.0       3830.0             NaN   \n",
+       "20484    -118.72     34.28                17.0       3051.0             NaN   \n",
+       "9814     -121.93     36.62                34.0       2351.0             NaN   \n",
+       "\n",
+       "       population  households  median_income  median_house_value  \\\n",
+       "20046      1392.0       359.0         1.6812             47700.0   \n",
+       "3024       1565.0       584.0         2.5313             45800.0   \n",
+       "15663      1310.0       963.0         3.4801            500001.0   \n",
+       "20484      1705.0       495.0         5.7376            218600.0   \n",
+       "9814       1063.0       428.0         3.7250            278000.0   \n",
+       "\n",
+       "      ocean_proximity  \n",
+       "20046          INLAND  \n",
+       "3024           INLAND  \n",
+       "15663        NEAR BAY  \n",
+       "20484       <1H OCEAN  \n",
+       "9814       NEAR OCEAN  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test.head()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a72b6bc1",
+   "id": "ac97ca85",
    "metadata": {},
    "outputs": [],
    "source": []
